--- a/old_babylon.css
+++ b/old_babylon.css
@@ -2,7 +2,7 @@ html body {
   /*background-color: #e1f5f3;*/
   font-family: Arial, sans-serif, Helvetica;
   margin: 0px;
-  background-color: #deccc8; }
+  background-color: #e8e2d1; }
 
 .fstrow {
   background-color: white;
@@ -25,7 +25,7 @@ div.menucontainer {
   text-align: center;
   width: 150px;
   margin-top: 0px;
-  height: 1200px;
+  height: 700px;
   float: left;
   margin-right: 10px; }
 
@@ -49,39 +49,16 @@ div.menu a:hover {
   margin-left: 20px;
   text-align: justify; }
 
-/*.image {
+.image {
   display: block;
   padding-right: 20px;
   float: right;
-  display:block;
+  display: block;
   margin-left: 20px;
-  margin-top: 20px;
-}*/
-.image, #side, #side2 {
-  height: 300px;
-  width: 400px;
-  float: right;
-  margin-left: 20px;
-  margin-right: 20px; }
-
-#side {
   margin-top: 20px; }
 
-/* table{
-  font-family: sans-serif, arial, Helvetica;
-  border: 1px solid black;
-}
+#side {
+  height: 300px;
+  width: 400px; }
 
-table  th  td{
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-th{
-  background-color: green;
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 12px;
-  color: white;
-}*/
-
-/*# sourceMappingURL=sumer_style.css.map */
+/*# sourceMappingURL=old_babylon.css.map */
