--- a/home_stylesheet.css
+++ b/home_stylesheet.css
@@ -109,6 +109,26 @@ html body {
 .main-content {
   margin-top: 10px; }
 
+/*Table Period --- scss nesting Example*/
+div.comparisontable table {
+  border-collapse: collapse;
+  width: 500px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px; }
+div.comparisontable th {
+  border: 1px solid white;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  background-color: black; }
+div.comparisontable td {
+  border: 1px solid white;
+  font-size: 20px;
+  color: green;
+  text-align: center; }
+
 /*footer is here*/
 .footers {
   background-color: black;
